# tweepypoll

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/tweepypoll/: Untitled.ipynb  tweepypoll.py
tests/: test_get_poll_by_id.py  test_get_polls_from_user.ipynb  test_get_polls_from_user.py  test_tweepypoll.py  test_visualize_poll.py
