[tool.poetry]
name = "tweepypoll"
version = "0.1.0"
description = "Collect and visualize twitter poll data."
authors = ["Wenxin Xiang, Rada Rudyak, Linh Giang Nguyen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
altair = "^4.2.0"
pandas = "^1.3.5"
tweepy = "^4.4.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
